tests/rosetta/out/Fortran/arithmetic-integer-2.error
gfortran error: exit status 1
/workspace/mochi/tests/rosetta/out/Fortran/arithmetic-integer-2.f90:21:3:

   21 |   main()
      |   1
Error: Unclassifiable statement at (1)
