tests/rosetta/out/Fortran/arithmetic-integer-2.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program arithmetic_integer_2
  implicit none
    integer :: a
    integer :: b
    character(len=100) :: s0
    character(len=100) :: s1
    character(len=100) :: s2
    character(len=100) :: s3
    character(len=100) :: s4
    character(len=100) :: s5
    character(len=100) :: s6
    character(len=100) :: s7
    character(len=100) :: s8
    character(len=100) :: s9
    character(len=100) :: s10
    character(len=100) :: s11
    character(len=100) :: s12
    character(len=100) :: s13
    character(len=100) :: s14
  main()
  contains
  recursive integer function main() result(res)
    a = 12345678
    b = 98765
    write(s0,'(G0)') a
    write(s1,'(G0)') b
    write(s2,'(G0)') (a + b)
    print *, trim(trim(trim(s0 // ' + ') // s1) // ' = ') // s2
    write(s3,'(G0)') a
    write(s4,'(G0)') b
    write(s5,'(G0)') (a - b)
    print *, trim(trim(trim(s3 // ' - ') // s4) // ' = ') // s5
    write(s6,'(G0)') a
    write(s7,'(G0)') b
    write(s8,'(G0)') (a * b)
    print *, trim(trim(trim(s6 // ' * ') // s7) // ' = ') // s8
    write(s9,'(G0)') a
    write(s10,'(G0)') b
    write(s11,'(G0)') int(((a / b)))
    print *, trim(trim(trim(s9 // ' quo ') // s10) // ' = ') // s11
    write(s12,'(G0)') a
    write(s13,'(G0)') b
    write(s14,'(G0)') mod(a,b)
    print *, trim(trim(trim(s12 // ' rem ') // s13) // ' = ') // s14
  end function main
end program arithmetic_integer_2
